[gd_scene load_steps=6 format=3 uid="uid://biuecmct7blvr"]

[ext_resource type="Script" path="res://scenes/signup.gd" id="1_nbnco"]
[ext_resource type="Texture2D" uid="uid://bk562ybu681k7" path="res://assets/galaxy.jpg" id="2_humme"]
[ext_resource type="FontFile" uid="uid://d153mdm4tperu" path="res://assets/Rubik_Distressed/RubikDistressed-Regular.ttf" id="3_1geem"]
[ext_resource type="Texture2D" uid="uid://3hcxqwu5dyjt" path="res://assets/kenney_game-icons/PNG/White/2x/buttonStart.png" id="4_43ao1"]
[ext_resource type="Texture2D" uid="uid://c34w3kxvgnb5g" path="res://assets/kenney_game-icons/PNG/White/2x/exitLeft.png" id="5_q0k3j"]

[node name="SignupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1080.0
offset_bottom = -1920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nbnco")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1090.0
offset_bottom = 1928.0
texture = ExtResource("2_humme")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 175.0
offset_right = 1067.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("3_1geem")
theme_override_font_sizes/font_size = 180
text = "CRAVE 
CRUSHER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 332.0
offset_top = 1133.0
offset_right = 1132.0
offset_bottom = 1191.0
theme_override_font_sizes/font_size = 30
text = "Swipe to dodge the junk food!"

[node name="RegisterButton" type="Button" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 1396.0
offset_right = 817.0
offset_bottom = 1588.0
theme_override_font_sizes/font_size = 60
text = "SIGN UP"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -4.0
offset_right = 176.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 50
theme_override_icons/icon = ExtResource("4_43ao1")
icon = ExtResource("5_q0k3j")
flat = true
icon_alignment = 1
expand_icon = true

[node name="name_ledit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 197.0
offset_top = 723.0
offset_right = 931.0
offset_bottom = 887.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Name"

[node name="email_ledit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 197.0
offset_top = 889.0
offset_right = 931.0
offset_bottom = 1053.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Email"

[node name="pass_ledit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 1054.0
offset_right = 933.0
offset_bottom = 1218.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Password"
secret = true

[node name="register_success_label" type="Label" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 1223.0
offset_right = 911.0
offset_bottom = 1286.0
theme_override_font_sizes/font_size = 30

[node name="email_success_label" type="Label" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 1285.0
offset_right = 903.0
offset_bottom = 1352.0
theme_override_font_sizes/font_size = 30

[node name="username_success_label" type="Label" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 1343.0
offset_right = 904.0
offset_bottom = 1410.0
theme_override_font_sizes/font_size = 30

[connection signal="pressed" from="RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
